syntax = "proto3";

package alloy.agent.v1;

import "alloy/agent/v1/process.proto";

// InstanceService manages persisted game instances.
//
// An instance is a named/configured unit that can be started/stopped multiple
// times. For the MVP, instance_id is also used as the process_id when running.
service InstanceService {
  rpc Create(CreateInstanceRequest) returns (CreateInstanceResponse);
  rpc Get(GetInstanceRequest) returns (GetInstanceResponse);
  rpc List(ListInstancesRequest) returns (ListInstancesResponse);
  rpc Start(StartInstanceRequest) returns (StartInstanceResponse);
  rpc Stop(StopInstanceRequest) returns (StopInstanceResponse);
  rpc Update(UpdateInstanceRequest) returns (UpdateInstanceResponse);
  // Import/replace an instance save (world) from a URL.
  //
  // This is intentionally agent-side to avoid control-plane file uploads and to
  // keep large downloads/extracts close to the data root.
  rpc ImportSaveFromUrl(ImportSaveFromUrlRequest) returns (ImportSaveFromUrlResponse);
  rpc DeletePreview(DeleteInstancePreviewRequest) returns (DeleteInstancePreviewResponse);
  rpc Delete(DeleteInstanceRequest) returns (DeleteInstanceResponse);
}

message InstanceConfig {
  string instance_id = 1;
  string template_id = 2;
  map<string, string> params = 3;
  string display_name = 4;
}

message InstanceInfo {
  InstanceConfig config = 1;
  // Present when the instance is currently tracked by the process manager.
  ProcessStatus status = 2;
}

message CreateInstanceRequest {
  string template_id = 1;
  map<string, string> params = 2;
  string display_name = 3;
}

message CreateInstanceResponse {
  InstanceConfig config = 1;
}

message GetInstanceRequest {
  string instance_id = 1;
}

message GetInstanceResponse {
  InstanceInfo info = 1;
}

message ListInstancesRequest {}

message ListInstancesResponse {
  repeated InstanceInfo instances = 1;
}

message StartInstanceRequest {
  string instance_id = 1;
}

message StartInstanceResponse {
  ProcessStatus status = 1;
}

message StopInstanceRequest {
  string instance_id = 1;
  uint32 timeout_ms = 2;
}

message StopInstanceResponse {
  ProcessStatus status = 1;
}

message DeleteInstanceRequest {
  string instance_id = 1;
}

message DeleteInstanceResponse {
  bool ok = 1;
}

message DeleteInstancePreviewRequest {
  string instance_id = 1;
}

message DeleteInstancePreviewResponse {
  string instance_id = 1;
  string path = 2;
  uint64 size_bytes = 3;
}

message UpdateInstanceRequest {
  string instance_id = 1;
  map<string, string> params = 2;
  string display_name = 3;
}

message UpdateInstanceResponse {
  InstanceConfig config = 1;
}

message ImportSaveFromUrlRequest {
  string instance_id = 1;
  // http(s) URL to a .zip (recommended) or a direct save file (e.g. .wld).
  string url = 2;
}

message ImportSaveFromUrlResponse {
  bool ok = 1;
  // Human-friendly summary for UI.
  string message = 2;
  // Path under the agent data root where the save was installed.
  string installed_path = 3;
  // Path under the agent data root where the previous save was backed up (if any).
  string backup_path = 4;
}
